@@ -16,6 +16,11 @@ $group = get_entity($guid);
 $title = elgg_echo("groups:membershiprequests");
 
 if (!empty($group) && elgg_instanceof($group, "group") && $group->canEdit()) {
+	// change page title
+	if ($group->isPublicMembership()) {
+		$title = elgg_echo("group_tools:menu:invitations");
+	}
+	
 	elgg_push_breadcrumb(elgg_echo("groups"), "groups/all");
 	elgg_push_breadcrumb($group->name, $group->getURL());
 	elgg_push_breadcrumb($title);
@@ -26,7 +31,7 @@ if (!empty($group) && elgg_instanceof($group, "group") && $group->canEdit()) {
 		"relationship" => "membership_request",
 		"relationship_guid" => $guid,
 		"inverse_relationship" => true,
-		"limit" => 0,
+		"limit" => false,
 	));
 	
 	// invited users
@@ -37,10 +42,19 @@ if (!empty($group) && elgg_instanceof($group, "group") && $group->canEdit()) {
 		"limit" => false
 	));
 	
+	// invited emails
+	$emails = elgg_get_annotations(array(
+		"annotation_name" => "email_invitation",
+		"annotation_owner_guid" => $group->getGUID(),
+		"wheres" => array("(v.string LIKE '%|%')"),
+		"limit" => false
+	));
+		
 	$content = elgg_view("groups/membershiprequests", array(
 		"requests" => $requests,
 		"invitations" => $invitations,
 		"entity" => $group,
+		"emails" => $emails
 	));
 
 } else {
