@@ -7,6 +7,8 @@
  * @uses $vars["invitations"] Array of ElggUsers who where invited
  */
 
+$group = elgg_extract("entity", $vars);
+
 // show membership requests
 $title = elgg_echo("group_tools:groups:membershipreq:requests");
 
@@ -22,7 +24,7 @@ if (!empty($vars["requests"]) && is_array($vars["requests"])) {
 			"is_trusted" => true,
 		));
 
-		$url = "action/groups/addtogroup?user_guid={$user->guid}&group_guid={$vars["entity"]->guid}";
+		$url = "action/groups/addtogroup?user_guid=" . $user->getGUID() . "&group_guid=" . $group->getGUID();
 		$url = elgg_add_action_tokens_to_url($url);
 		$accept_button = elgg_view("output/url", array(
 			"href" => $url,
@@ -31,12 +33,12 @@ if (!empty($vars["requests"]) && is_array($vars["requests"])) {
 			"is_trusted" => true,
 		));
 
-		$url = "action/groups/killrequest?user_guid=" . $user->guid . "&group_guid=" . $vars["entity"]->guid;
+		$url = "action/groups/killrequest?user_guid=" . $user->getGUID() . "&group_guid=" . $group->getGUID();
 		$delete_button = elgg_view("output/confirmlink", array(
-				"href" => $url,
-				"confirm" => elgg_echo("groups:joinrequest:remove:check"),
-				"text" => elgg_echo("delete"),
-				"class" => "elgg-button elgg-button-delete mlm",
+			"href" => $url,
+			"confirm" => elgg_echo("groups:joinrequest:remove:check"),
+			"text" => elgg_echo("delete"),
+			"class" => "elgg-button elgg-button-delete mlm",
 		));
 
 		$body = "<h4>$user_title</h4>";
@@ -64,30 +66,64 @@ if (!empty($vars["invitations"]) && is_array($vars["invitations"])) {
 		$icon = elgg_view_entity_icon($user, "tiny", array("use_hover" => "true"));
 
 		$user_title = elgg_view("output/url", array(
-				"href" => $user->getURL(),
-				"text" => $user->name,
-				"is_trusted" => true,
+			"href" => $user->getURL(),
+			"text" => $user->name,
+			"is_trusted" => true,
 		));
 
-		$url = "action/groups/killinvitation?user_guid=" . $user->guid . "&group_guid=" . $vars["entity"]->guid;
+		$url = "action/groups/killinvitation?user_guid=" . $user->getGUID() . "&group_guid=" . $group->getGUID();
 		$delete_button = elgg_view("output/confirmlink", array(
-					"href" => $url,
-					"confirm" => elgg_echo("group_tools:groups:membershipreq:invitations:revoke:confirm"),
-					"text" => elgg_echo("group_tools:revoke"),
-					"class" => "elgg-button elgg-button-delete mlm",
+			"href" => $url,
+			"confirm" => elgg_echo("group_tools:groups:membershipreq:invitations:revoke:confirm"),
+			"text" => elgg_echo("group_tools:revoke"),
+			"class" => "elgg-button elgg-button-delete mlm",
 		));
 
 		$body = "<h4>$user_title</h4>";
-		$alt = $delete_button;
-
+		
 		$content .= "<li class='pvs'>";
-		$content .= elgg_view_image_block($icon, $body, array("image_alt" => $alt));
+		$content .= elgg_view_image_block($icon, $body, array("image_alt" => $delete_button));
 		$content .= "</li>";
 	}
 
 	$content .= "</ul>";
 } else {
 	$content = "<p class='mtm'>" . elgg_echo("group_tools:groups:membershipreq:invitations:none") . "</p>";
+}
+
+echo elgg_view_module("info", $title, $content);
+
+// show email invitations
+$title = elgg_echo("group_tools:groups:membershipreq:email_invitations");
+
+$emails = elgg_extract("emails", $vars);
+if (!empty($emails)) {
+	$content = "<ul class='elgg-list'>";
+	
+	foreach ($emails as $annotation) {
+		
+		list(,$email) = explode("|", $annotation->value);
+		
+		$email_title = elgg_view("output/email", array("value" => $email));
+		
+		$url = "action/group_tools/revoke_email_invitation?annotation_id=" . $annotation->id . "&group_guid=" . $group->getGUID();
+		$delete_button = elgg_view("output/confirmlink", array(
+			"href" => $url,
+			"confirm" => elgg_echo("group_tools:groups:membershipreq:invitations:revoke:confirm"),
+			"text" => elgg_echo("group_tools:revoke"),
+			"class" => "elgg-button elgg-button-delete mlm",
+		));
+		
+		$body = "<h4>$email_title</h4>";
+		
+		$content .= "<li class='pvs'>";
+		$content .= elgg_view_image_block("", $body, array("image_alt" => $delete_button));
+		$content .= "</li>";
+	}
+	
+	$content .= "</ul>";
+} else {
+	$content = "<p class='mtm'>" . elgg_echo("group_tools:groups:membershipreq:email_invitations:none") . "</p>";
 }
 
 echo elgg_view_module("info", $title, $content);
